# BME_platform_flask

./: .gitignore  README.md  app.py  config.py  exts.py  gunicorn.conf  models.py  pyproject.toml  requirements.txt
apidocs/Ragflow/: chat_stream.yaml
apidocs/article/: article.yaml  article_delete.yaml  article_detail.yaml  article_detail_json.yaml  article_edit.yaml  article_list.yaml  article_public.yaml
apidocs/codecheck/: admin_records.yaml  check_in_out.yaml  generate_check_code.yaml  get_records.yaml  get_yearly_records.yaml  records_top10.yaml  weekly_records.yaml
apidocs/course/: book_down.yaml  book_download.yaml  book_upgrade.yaml  chapter_list.yaml  chapter_public.yaml  course_delete.yaml  course_edit.yaml  list.yaml  public.yaml  search_courses.yaml
apidocs/homeCover/: delete.yaml  list.yaml  search.yaml  update.yaml
apidocs/learningProgress/: delete.yaml  group.yaml  group_through_courseid.yaml  list.yaml  student.yaml  update.yaml
apidocs/medal/: medal_create.yaml  medal_delete.yaml  medal_edit.yaml  medal_list.yaml  user_medal_add.yaml  user_medal_list.yaml  user_medal_show.yaml
apidocs/user/: admin_login.yaml  find_password.yaml  get_email_captcha.yaml  group.yaml  group_add.yaml  group_delete.yaml  group_list.yaml  login.yaml  register.yaml  user_avatars.yaml  user_avatars_id.yaml  user_avatars_upgrade.yaml  user_edit.yaml  user_index.yaml  user_list.yaml
blueprints/: Ragflow.py  __init__.py  ai.py  article.py  auth.py  codecheck.py  course.py  forms.py  homeCover.py  learningProgress.py  medal.py  user.py
(+1 files in other folders)
