[project]
name = "sysu-bme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flasgger>=0.9.7.1",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "flask-jwt-extended>=4.7.1",
    "flask-limiter>=3.12",
    "flask-mail>=0.10.0",
    "flask-migrate>=4.1.0",
    "flask-redis>=0.4.0",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "openai>=1.93.0",
    "pymysql>=1.1.1",
]

[tool.uv.sources]
index_url = { url = "https://mirrors.aliyun.com/pypi/simple/" }
